<resources>
    <string name="app_name">Git Planner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splashscreen">SplashScreen</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="username_or_email">username or email</string>
    <string name="password">password</string>
    <string name="or_login_with">or login with</string>
    <string name="username">username</string>
    <string name="email">email</string>
    <string name="mark_as_done">Mark as done</string>
    <string name="set_reminder">Set reminder</string>
    <string name="set_time">Set Time</string>
    <string name="set_time_24h_format">Set Time (24H Format)</string>
    <string name="calendar">Calendar</string>
    <string name="activity">Activity</string>
    <string name="language">Language</string>
    <string name="security">Security</string>
    <string name="additional_information">Additional Information</string>
    <string name="term_and_conditions">Term and Conditions</string>
    <string name="app_version">App version</string>
    <string name="logout">Logout</string>
</resources>