<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_data_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="10dp">
                <ImageView
                    android:id="@+id/img_profile"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight=".1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_baseline_insert_emoticon_24"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="10dp"
                    android:layout_weight="2">
                    <TextView
                        android:id="@+id/name_user"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Name"
                        android:textStyle="bold"
                        android:textSize="20sp"/>
                    <TextView
                        android:id="@+id/email_user"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"/>
                </LinearLayout>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
                    android:layout_weight=".5"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/ll_calendar_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:padding="16dp">
            <ImageView
                android:id="@+id/img_calendar_profile"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_baseline_calendar_month_24"
                android:layout_weight=".1"/>
            <TextView
                android:id="@+id/tv_calendar_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:text="@string/calendar"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_activity_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:padding="16dp">
            <ImageView
                android:id="@+id/img_activity_profile"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_baseline_task_24"
                android:layout_weight=".1"/>
            <TextView
                android:id="@+id/tv_activity_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:text="@string/activity"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_language_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:padding="16dp">
            <ImageView
                android:id="@+id/img_language_profile"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_baseline_language_24"
                android:layout_weight=".1"/>
            <TextView
                android:id="@+id/tv_language_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:text="@string/language"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_security_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:padding="16dp">
            <ImageView
                android:id="@+id/img_security_profile"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_baseline_language_24"
                android:layout_weight=".1"/>
            <TextView
                android:id="@+id/tv_security_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:text="@string/security"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/additional_information"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="16dp"/>

        <LinearLayout
            android:id="@+id/ll_term_and_condition_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:padding="16dp">
            <ImageView
                android:id="@+id/img_term_and_condition_profile"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_baseline_sticky_note_2_24"
                android:layout_weight=".1"/>
            <TextView
                android:id="@+id/tv_term_and_condition_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:text="@string/term_and_conditions"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_app_version_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:padding="16dp">
            <ImageView
                android:id="@+id/img_app_version_profile"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_baseline_install_mobile_24"
                android:layout_weight=".1"/>
            <TextView
                android:id="@+id/tv_app_version_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:text="@string/app_version"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_logout_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:padding="16dp">
            <ImageView
                android:id="@+id/img_logout_profile"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_baseline_logout_24"
                android:layout_weight=".1"/>
            <TextView
                android:id="@+id/tv_logout_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:text="@string/logout"/>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>